ipc/ipdl/test/ipdl/ok/PManualDealloc.ipdl
[ManualDealloc] async protocol PManualDealloc {
child:
    async __delete__();
};
